added axios function to acces openAI api

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Recipe Builder</h1>
       <div>
-        <form id="ingredients">
+        <form id="form_ingredients">
           <label for="ingredients">Input ingredients:</label><br>
           <textarea  name="ingredients" cols="30" rows="10"></textarea><br>
           <input type="submit" value="Submit"><br>
